--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <a class="header-logo link" href="./index.html">
             Web<span class="header-logo-color link">Studio</span>
           </a>
-          <ul class="conteiner-nav header-list list">
+          <ul class="conteiner-nav menu header-list list">
             <li class="header-item">
               <a class="header-link link current" href="./index.html">Студія</a>
             </li>
@@ -107,14 +107,17 @@
         <div class="conteiner">
           <h2 class="teem-desk">Чим ми займаємося</h2>
           <ul class="img-conteiner list">
-            <li>
+            <li class="product">
               <img src="images/img.jpg" alt="photo" width="370" height="294" />
+              <p class="job-text">десктопні додатки</p>
             </li>
-            <li>
+            <li class="product">
               <img src="images/img1.jpg" alt="photo" width="370" height="294" />
+              <p class="job-text">мобільні додатки</p>
             </li>
-            <li>
+            <li class="product">
               <img src="images/img2.jpg" alt="photo" width="370" height="294" />
+              <p class="job-text">дизайнерські рішення</p>
             </li>
           </ul>
         </div>
