--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
             <button class="btn subject-btn" type="button">
               Замовити послугу
             </button>
+            <div class="backdrop"></div>
+            <div class="modal">
+              <button>x</button>
+            </div>
           </div>
         </div>
       </section>
