--- a/index.html
+++ b/index.html
@@ -68,7 +68,13 @@
           </div>
           <div data-modal class="backdrop is-hidden">
             <div class="modal">
-              <button data-modal-close type="button">close</button>
+              <button class="btn-close" data-modal-close type="button">
+                <svg width="11px" height="11px">
+                  <use href="./images/symbol-defs.svg#icon-close-black" >
+
+                  </use>
+                </svg>
+              </button>
             </div>
   
           </div>
