--- a/portfolio.html
+++ b/portfolio.html
@@ -63,8 +63,8 @@
         <div class="conteiner">
           <h1 class="visually-hidden">portfolio</h1>
           <ul class="conteiner-nav content list">
-            <li class="">
-              <button class="content-btn-item" type="button">Усі</button>
+            <li class="current">
+              <button class="content-btn-item " type="button">Усі</button>
             </li>
             <li>
               <button class="content-btn-item" type="button">Веб-сайти</button>
