--- a/index.html
+++ b/index.html
@@ -64,22 +64,8 @@
             <button data-modal-open class="btn subject-btn" type="button">
               Замовити послугу
             </button>
-           
-          </div>
-          <div data-modal class="backdrop is-hidden">
-            <div class="modal">
-              <button class="btn-close" data-modal-close type="button">
-                <svg width="11px" height="11px">
-                  <use href="./images/symbol-defs.svg#icon-close-black" >
-
-                  </use>
-                </svg>
-              </button>
-            </div>
-  
           </div>
         </div>
-       
       </section>
 
       <section class="conteiner-teem">
@@ -454,6 +440,15 @@
         </div>
       </div>
     </footer>
+    <div data-modal class="backdrop is-hidden">
+      <div class="modal">
+        <button class="btn-close" data-modal-close type="button">
+          <svg width="18px" height="18px">
+            <use href="./images/symbol-defs.svg#icon-close-black"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
     <script src="./js/modal.js"></script>
   </body>
 </html>
