--- a/portfolio.html
+++ b/portfolio.html
@@ -64,7 +64,7 @@
           <h1 class="visually-hidden">portfolio</h1>
           <ul class="conteiner-nav content list">
             <li class="current">
-              <button class="content-btn-item " type="button">Усі</button>
+              <button class="content-btn-item" type="button">Усі</button>
             </li>
             <li>
               <button class="content-btn-item" type="button">Веб-сайти</button>
@@ -82,8 +82,13 @@
           <ul class="portfolio-img list">
             <li>
               <a class="icon" href="/">
-                <div class="icon-portfolio" >
+                <div class="icon-portfolio">
                   <img src="./images/vep1.jpg" alt="project" width="370" />
+                  <p class="text-transform">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
                 </div>
                 <div class="project-icon">
                   <h2 class="icon-text">Технокряк</h2>
@@ -94,8 +99,15 @@
 
             <li>
               <a class="icon" href="">
-                <div class="icon-portfolio" ><img src="./images/vep2.jpg" alt="project" width="370" /></div>
-                
+                <div class="icon-portfolio">
+                  <img src="./images/vep2.jpg" alt="project" width="370" />
+                  <p class="text-transform">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
+
                 <div class="project-icon">
                   <h2 class="icon-text">Постер New Orlean vs Golden Star</h2>
                   <p class="icon-text-list">Дизайн</p>
@@ -104,9 +116,15 @@
             </li>
 
             <li>
-              <a class="icon icon-" href=""
-                >
-                <div class="icon-portfolio"><img src="./images/vep3.jpg" alt="project" width="370" /></div>
+              <a class="icon icon-" href="">
+                <div class="icon-portfolio">
+                  <img src="./images/vep3.jpg" alt="project" width="370" />
+                  <p class="text-transform">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="project-icon">
                   <h2 class="icon-text">Ресторан Seafood</h2>
                   <p class="icon-text-list link">Додаток</p>
@@ -115,9 +133,15 @@
             </li>
 
             <li>
-              <a class="icon" href=""
-                >
-                <div class="icon-portfolio"><img src="./images/vep4.jpg" alt="project" width="370" /></div>
+              <a class="icon" href="">
+                <div class="icon-portfolio">
+                  <img src="./images/vep4.jpg" alt="project" width="370" />
+                  <p class="text-transform">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="project-icon">
                   <h2 class="icon-text">Проєкт Prime</h2>
                   <p class="icon-text-list">Маркетинг</p>
@@ -126,9 +150,15 @@
             </li>
 
             <li>
-              <a class="icon" href=""
-                >
-                <div class="icon-portfolio"><img src="./images/vep5.jpg" alt="project" width="370" /></div>
+              <a class="icon" href="">
+                <div class="icon-portfolio">
+                  <img src="./images/vep5.jpg" alt="project" width="370" />
+                  <p class="text-transform">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="project-icon">
                   <h2 class="icon-text">Проєкт Boxes</h2>
                   <p class="icon-text-list">Додаток</p>
@@ -138,7 +168,14 @@
 
             <li>
               <a class="icon" href=""
-                ><div class="icon-portfolio"><img src="./images/vep6.jpg" alt="project" width="370" /></div>
+                ><div class="icon-portfolio">
+                  <img src="./images/vep6.jpg" alt="project" width="370" />
+                  <p class="text-transform">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="project-icon">
                   <h2 class="icon-text">Inspiration has no Borders</h2>
                   <p class="icon-text-list">Веб-сайт</p>
@@ -148,7 +185,14 @@
 
             <li>
               <a class="icon" href=""
-                ><div class="icon-portfolio"><img src="./images/vep7.jpg" alt="project" width="370" /></div>
+                ><div class="icon-portfolio">
+                  <img src="./images/vep7.jpg" alt="project" width="370" />
+                  <p class="text-transform">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="project-icon">
                   <h2 class="icon-text">Видання Limited Edition</h2>
                   <p class="icon-text-list">Дизайн</p>
@@ -158,7 +202,14 @@
 
             <li>
               <a class="icon" href=""
-                ><div class="icon-portfolio"><img src="./images/vep8.jpg" alt="project" width="370" /></div>
+                ><div class="icon-portfolio">
+                  <img src="./images/vep8.jpg" alt="project" width="370" />
+                  <p class="text-transform">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="project-icon">
                   <h2 class="icon-text">Проєкт LAB</h2>
                   <p class="icon-text-list">Маркетинг</p>
@@ -168,7 +219,14 @@
 
             <li>
               <a class="icon" href=""
-                ><div class="icon-portfolio"><img src="./images/vep9.jpg" alt="project" width="370" /></div>
+                ><div class="icon-portfolio">
+                  <img src="./images/vep9.jpg" alt="project" width="370" />
+                  <p class="text-transform">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="project-icon">
                   <h2 class="icon-text">Growing Business</h2>
                   <p class="icon-text-list">Додаток</p>
